<resources>
    <string name="app_name">Swis</string>
    <string name="pref_name">swis_project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_news_page_detail">NewsPageDetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"


    </string>
    <string name="about_us">About Us</string>


    <string name="terms_and_condition">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notifications</string>
    <string name="share_searches">Share Searches</string>
    <string name="share_searches_locally">Share Searches Locally</string>
    <string name="faq">FAQ</string>
    <string name="About">About</string>
    <string name="report_an_issue">Report an Issue</string>
    <string name="logout">Logout</string>
    <string name="bio">Bio</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="background_image">Background Image</string>
    <string name="share_searched">Share Searched</string>
    <string name="share_bookmarks">Share Bookmarks</string>
    <string name="auto_accept_follows">Auto Accept Follows</string>
    <string name="follow_request">Follow Requests</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthday">Birthday</string>
    <string name="residence">Residence</string>
    <string name="location">Location</string>
    <string name="update">Update</string>
    <string name="change_background_image">Change Background Image</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="follows">Follows</string>
    <string name="please_provide">Please provide your phone numbers so we can send you a verification code</string>
    <string name="please_provide_new">Enter your phone numbers and we will send you an otp to verify</string>
    <string name="submit">SUBMIT</string>
    <string name="view_previous_replies">--- view previous replies(%s)</string>
    <string name="hide_replies">--- hide replies</string>
    <string name="all">TRENDING</string>
    <string name="news">NEWS</string>
    <string name="videos">VIDEOS</string>
    <string name="images">IMAGES</string>
    <string name="maps">MAPS</string>
    <string name="youtube">YOUTUBE</string>
    <string name="amazon">AMAZON</string>
    <string name="google">Google</string>
    <string name="home">Home</string>
    <string name="local">Search Near Me</string>
    <string name="search">Search</string>
    <string name="recommended">Recommended</string>
    <string name="profile">Profile</string>
    <string name="swis">SWIS</string>
    <string name="permission_denied_storage">Allow file storage permission</string>


</resources>
