<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/home"
        />

    <item
        android:id="@+id/nav_search_near_me"
        android:title="@string/local"
        android:icon="@drawable/loc"/>

    <item
        android:id="@+id/nav_search"
        android:title="@string/search"
        android:icon="@drawable/sear"/>


    <item
        android:id="@+id/nav_rec"
        android:icon="@drawable/recom"
        android:title="@string/recommended" />

    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/default_user"
        />

</menu>