<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="true"
        android:background="@color/white"
        tools:context=".fragment.SettingFragment">

        <!-- TODO: Update blank fragment layout -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10">

                <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_profile"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/ts_16" />

                <ImageView
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_15"
                    android:layout_gravity="center"
                    android:src="@drawable/asset_26" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/divider_color" />

            <LinearLayout
                android:id="@+id/ll_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10">

                <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/notification"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/ts_16" />

                <ImageView
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_15"
                    android:layout_gravity="center"
                    android:src="@drawable/asset_26" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/divider_color" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_6">

                <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/share_searches"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/ts_16" />

                <vn.luongvo.widget.iosswitchview.SwitchView
                    android:id="@+id/sw_share"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/divider_color" />

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_6">

            <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share_searches_locally"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/ts_16" />

                <vn.luongvo.widget.iosswitchview.SwitchView
                    android:id="@+id/sw_share_loc"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />


        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/divider_color" />

            <LinearLayout
                android:id="@+id/ll_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10">

                <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/ts_16" />

                <ImageView
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_15"
                    android:layout_gravity="center"
                    android:src="@drawable/asset_26" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/divider_color" />

            <LinearLayout
                android:id="@+id/ll_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10">

                <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/terms_and_condition"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/ts_16" />

                <ImageView
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_15"
                    android:layout_gravity="center"
                    android:src="@drawable/asset_26" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/divider_color" />

            <LinearLayout
                android:id="@+id/ll_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10">

                <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/faq"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/ts_16" />

                <ImageView
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_15"
                    android:layout_gravity="center"
                    android:src="@drawable/asset_26" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/divider_color" />

            <LinearLayout
                android:id="@+id/ll_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10">

                <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/About"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/ts_16" />

                <ImageView
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_15"
                    android:layout_gravity="center"
                    android:src="@drawable/asset_26" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/divider_color" />

            <LinearLayout
                android:id="@+id/ll_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10">

                <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/report_an_issue"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/ts_16" />

                <ImageView
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_15"
                    android:layout_gravity="center"
                    android:src="@drawable/asset_26" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/divider_color" />

            <LinearLayout
                android:id="@+id/ll_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10">

                <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/logout"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/ts_16" />

                <ImageView
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_15"
                    android:layout_gravity="center"
                    android:src="@drawable/asset_26" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/divider_color" />

        </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>