<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fl_main1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".fragment.SettingFragment">

        <!-- TODO: Update blank fragment layout -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10">

                    <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bio"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/ts_16" />

                    <ImageView
                        android:layout_width="@dimen/dp_15"
                        android:layout_height="@dimen/dp_15"
                        android:layout_gravity="center"
                        android:src="@drawable/asset_26" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/divider_color" />

                <LinearLayout
                    android:id="@+id/ll_profile_pic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10">

                    <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/profile_pic"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/ts_16" />

                    <ImageView
                        android:layout_width="@dimen/dp_15"
                        android:layout_height="@dimen/dp_15"
                        android:layout_gravity="center"
                        android:src="@drawable/asset_26" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/divider_color" />

                <LinearLayout
                    android:id="@+id/ll_back_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10">

                    <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/background_image"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/ts_16" />

                    <ImageView
                        android:layout_width="@dimen/dp_15"
                        android:layout_height="@dimen/dp_15"
                        android:layout_gravity="center"
                        android:src="@drawable/asset_26" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/divider_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_6">

                    <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/share_searched"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/ts_16" />

                    <vn.luongvo.widget.iosswitchview.SwitchView
                        android:id="@+id/sw_share_search"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/divider_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_6">

                    <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/share_bookmarks"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/ts_16" />
                    <vn.luongvo.widget.iosswitchview.SwitchView
                        android:id="@+id/sw_share_bookmarks"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/divider_color" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_6">

                    <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/auto_accept_follows"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/ts_16" />

                    <vn.luongvo.widget.iosswitchview.SwitchView
                        android:id="@+id/sw_auto_accept"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/divider_color" />

                <LinearLayout
                    android:id="@+id/ll_follow_request"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10">

                    <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                        android:id="@+id/tv_follow_req"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/follow_request"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/ts_16" />

                    <ImageView
                        android:layout_width="@dimen/dp_15"
                        android:layout_height="@dimen/dp_15"
                        android:layout_gravity="center"
                        android:src="@drawable/asset_26" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/divider_color" />



            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>