<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@color/white"
        tools:context=".fragment.NotificationFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10">

                <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/likes"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/ts_16" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SCBSwitch"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/divider_color" />
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10">

                <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/comments"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/ts_16" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SCBSwitch"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/divider_color" />
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10">

                <com.swis.android.custom.customviews.textViews.GothamRoundedMed
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/follows"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/ts_16" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SCBSwitch"
                    />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</layout>